--- a/style.css
+++ b/style.css
@@ -65,10 +65,112 @@ li a:hover {
 
 .main{
 	margin: auto;
-	width: 60%;
+	width: 70%;
+	height:auto;
 	padding: 10px;
 	
 }
+
+
+.news img {
+	width: 30%;
+	float: left;
+	padding: 0.5em;
+	margin: 0 1em 0.5em 0.5em;
+}
+
+.news1, .news2, .news3 {
+	border-left: 3px solid green;
+	width: 30%;
+	float:left;
+	height:200px;
+	padding-left:5px;
+	margin-bottom:20px;
+	margin-left:10px;	
+}
+
+.gallery {
+	width: 500px;
+	height: 300px;
+	position: relative;
+	display: block;
+	padding: 0;
+}
+
+.gallery * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+.gallery input {
+	display: none;
+}
+
+.slide-wrapper {
+	display: block;
+}
+
+.slide {
+	width: 100%;
+	height: 100%;
+	display: block;
+    position: absolute;
+
+    transform: scale(0);
+    transition: all .7s ease-in-out;
+}
+
+.slide img {
+	width: 100%;
+	height: 100%;	
+}
+
+.nav label {
+	width: 200px;
+	text-align: center;
+	position: absolute;
+	z-index: 9;
+	height: 100%;
+	opacity: 0;
+	font-size: 5em;
+	line-height: 380px;
+	cursor: pointer;
+	color: white;
+	background-color: rgba(255,255,255,.5);
+	display: none;
+
+	transition: opacity .2s;
+}
+
+.nav .next {
+	right: 0;
+}
+
+.slide:hover + .nav label { 
+	opacity: 0.5; 
+}
+
+.nav label:hover { 
+	opacity: 1; 
+}
+
+input:checked + .slide-wrapper .slide {
+    opacity: 1;
+
+    transform: scale(1);
+
+    transition: opacity 1s ease-in-out;
+}
+
+input:checked + .slide-wrapper .nav label { 
+	display: block; 
+}
+
+
 
 figure {
 	padding: 0.5em;
@@ -80,11 +182,26 @@ figure {
 figcaption {
 	font-size: 90%;
 }
+
+.slide figcaption{
+	
+	
+	background: rgba(0, 0, 0, 0.5);
+    color: #FFF;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+	
+	}
+
 img {
 	width: 100%;
 }
 
 footer {
+	margin-top:50px;
 	background-color: #333;
 	padding: 0.1em;
 	clear: both;
